<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewMaintenanceActivity"
    tools:showIn="@layout/activity_detail_maintenance">

    <EditText
        android:id="@+id/editMaintenanceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingRight="@dimen/dimen_2"
        android:paddingTop="@dimen/dimen_2"
        android:paddingBottom="@dimen/dimen_2"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/colorGreyLight"
        app:layout_constraintTop_toBottomOf="@+id/editMaintenanceName"/>

    <EditText
        android:id="@+id/editMaintenanceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:lines="3"
        android:gravity="top"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingRight="@dimen/dimen_2"
        android:paddingTop="@dimen/dimen_2"
        android:paddingBottom="@dimen/dimen_2" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreyLight"
        app:layout_constraintTop_toBottomOf="@+id/editMaintenanceDescription"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/textStartDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thursday, 15th May 2018"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_change"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:text="@string/start_day_description"
        android:textAppearance="@style/extraSmallText"
        android:textColor="@color/colorGreyMedium"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_day"
        android:textColor="@color/colorBlack"
        android:paddingStart="@dimen/dimen_2"
        android:paddingLeft="@dimen/dimen_2"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreyLight"
        android:layout_marginTop="@dimen/dimen_2"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <TextView
            android:id="@+id/textNotificationInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_change"
            android:textColor="@color/colorBlack" />

    </LinearLayout>



    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:text="@string/notification_interval_description"
        android:textAppearance="@style/extraSmallText"
        android:textColor="@color/colorGreyMedium"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:text="@string/notification_interval"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/text5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</android.support.constraint.ConstraintLayout>