<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:paddingLeft="@dimen/dimen_2"
        android:text="@string/notification"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toTopOf="@+id/text" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_2"
        android:background="@color/colorGreyLight"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <TextView
        android:id="@+id/textNotificationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_2"
        android:text="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintRight_toRightOf="@+id/text3"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintLeft_toLeftOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_2"
        android:layout_marginRight="@dimen/dimen_2"
        android:text="@string/click_to_change"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNotificationTime" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:text="@string/notification_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text6" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_2"
        android:paddingStart="@dimen/dimen_2"
        android:text="@string/notification_time_description"
        android:textColor="@color/colorGreyMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text3" />

</android.support.constraint.ConstraintLayout>